Change reservations car attribute from int to string
