# swagger/v1/swagger.yaml
@@ -75,10 +75,10 @@ paths:
               properties:
                 user_id:
                   type: integer
-                car_id:
-                  type: integer
-                city_id:
-                  type: integer
+                car:
+                  type: string
+                city:
+                  type: string
                 start_date:
                   type: string
                 end_date:
